@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-11-26T16:17:29Z",
+  "timestamp" : "2023-11-27T01:07:34Z",
   "count_outdated" : 2352,
   "uniques_outdated" : 454,
-  "count" : 2613,
-  "uniques" : 488,
+  "count" : 2618,
+  "uniques" : 489,
   "views" : [
     {
       "timestamp": "2023-11-13T00:00:00Z",
@@ -100,6 +100,15 @@
       "count": 3,
       "count_minmax": [ 3, 3 ],
       "count_decinc": [ 0, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-11-26T00:00:00Z",
+      "count": 5,
+      "count_minmax": [ 5, 5 ],
+      "count_decinc": [ 0, 5 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
