@@ -1,6 +1,6 @@
 {
-  "count": 261,
-  "uniques": 32,
+  "count": 266,
+  "uniques": 33,
   "views": [
     {
       "timestamp": "2023-11-13T00:00:00Z",
@@ -55,6 +55,11 @@
     {
       "timestamp": "2023-11-25T00:00:00Z",
       "count": 3,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-11-26T00:00:00Z",
+      "count": 5,
       "uniques": 1
     }
   ]
