@@ -1,3 +1,12 @@
+2023-11-27T01:07:34Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6999287103 # 2115
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-27
+* notice: last 14d: unq all: 33 266
+* notice: prev accum: outdated-unq outdated-all / unq all: 454 2352 / 488 2613
+* notice: next accum: outdated-unq outdated-all / unq all: 454 2352 / 489 2618
+* notice: prev exec diff / last date diff / accum: unq all: +1 +5 -0 -0 / +1 +5 -0 -0 / 1 5
+* notice: removed / changed dates: [] / [2023-11-26]
+
 2023-11-26T16:17:29Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6996681093 # 2114
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-26
